--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
             </div>
         </section>
     </div>
+    <footer>
+        Designed & Developed by <a href="https://mithiljain.com"> &nbsp;Mithil Jain</a>
+    </footer>
 </body>
 </html>
 
