about and accreditation page layout done

--- a/about.html
+++ b/about.html
@@ -13,11 +13,12 @@
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/template.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <script src="js/parallax.js"></script>
 </head>
-<body>
+<body id="about">
     <header>
         <div class="header container">
             <a class="brand-logo">
@@ -45,64 +46,63 @@
             </div>
         </div>
     </header>
-    <div class="content ">
-        <section class="page" id="hero-section">
-            <div class="container">
-                <div class="pitch">
-                    <div>
-                        <p class="pitch-text">TRUSTED SUPPLIER <p>
-                        <p class="pitch-text">IN CEMENT INDUSTRY</p>
-                        <p class="pitch-text">SINCE <span class="highlight-text">1938</span></p>
-                        <div class="divider"></div>
-                        <p class="soft-pitch-text">
-                            Bhamra Concrete Pvt. Ltd. is dealing with hiring and
-                            leasing of construction equipments including
-                            Bhamra Concrete Pvt. Ltd. is dealing with <br/> hiring and
-                            leasing of construction equipments including
-                        </p>
-                        <div class="hero-cta">
-                            <button>
-                                GET IN TOUCH
-                            </button>
-                            <button>
-                                VIEW GROUP COMPANIES
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <img src="img/hero-image.png" class="hero-image" alt="hero"/>
-            </div>
-        </section>
-        <section class="page layout-1" id="company-1">
+    <div class="content">
+        <section class="layout-3" id="who-we-are">
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <p class="title">Some Header Here</p>
+                        <p class="title">Who we are</p>
                         <div class="divider"></div>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                        <p class="desc"><b>Detailed history of Bhamra Group
+                            Milestones and achievements should come here in short</b>
+                            auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-1-img"/>
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="page layout-2" id="company-2">
+        <section id="leadership">
+            <div class="container">
+                <div class="main">
+                    <p class="title">Leadership</p>
+                    <p class="desc">Write some content related to the leadership of both of them</p>
+                    <div class="leaders">
+                        <div class="leader">
+                            <div class="img">
+                                <img src="img/stock-img.jpeg" alt="hero"/>
+                            </div>
+                            <div class="desc">
+                                <p class="name">Mr. Manmeet Singh Bhamra</p>
+                                <p class="role">Role</p>
+                            </div>
+                        </div>
+                        <div class="leader">
+                            <div class="img">
+                                <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                            </div>
+                            <div class="desc">
+                                <p class="name">Mr. Manmeet Singh Bhamra</p>
+                                <p class="role">Role</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="layout-2" id="our-mission">
             <div class="container">
                 <div class="main">
                     <div class="left-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
-                        <p class="title">Some Header Here</p>
+                        <p class="title">Our Mision</p>
                         <div class="divider"></div>
                         <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
                             pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
@@ -110,18 +110,15 @@
                             in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="page layout-3" id="company-3">
+        <section class="layout-3" id="our-vision">
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <p class="title">Some Header Here</p>
+                        <p class="title">Our Vision</p>
                         <div class="divider"></div>
                         <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
                             pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
@@ -129,12 +126,46 @@
                             in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
                     </div>
                     <div class="right-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page" id="accreditation-1">
+            <div class="container">
+                <div class="main">
+                    <p class="title">Accreditation | Certificates</p>
+                    <div class="image-gallery">
+                        <div class="image-gallery-row">
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 1</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 2</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 3</p>
+                            </div>
+                        </div>
+                        <div class="image-gallery-row">
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 1</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 2</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 3</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
