--- a/templates.html
+++ b/templates.html
@@ -139,6 +139,43 @@
                 </div>
             </div>
         </section>
+        <section class="page" id="accreditation-1">
+            <div class="container">
+                <div class="main">
+                    <p class="title">Accreditation</p>
+                    <div class="image-gallery">
+                        <div class="image-gallery-row">
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 1</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 2</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 3</p>
+                            </div>
+                        </div>
+                        <div class="image-gallery-row">
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 1</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 2</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/certificate.jpeg"/>
+                                <p class="caption">Cerificate 3</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
         Designed & Developed by <a href="https://mithiljain.com"> &nbsp;Mithil Jain</a>
