--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
                 <span>BHAMRA GROUP</span>
             </a>
             <div class="menu-ul">
-                <a class="menu-li">The Group</a>
-                <a class="menu-li">About</a>
-                <a class="menu-li">Media</a>
-                <a class="menu-li">Accreditation</a>
+                <a class="menu-li" href="/">The Group</a>
+                <a class="menu-li" href="/about">About</a>
+                <!--                <a class="menu-li">Media</a>-->
+                <a class="menu-li" href="/accreditation">Accreditation</a>
             </div>
             <div class="get-intouch">
                 <div>
