--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <span>BHAMRA GROUP</span>
             </a>
             <div class="menu-ul">
-                <a class="menu-li">The Group</a>
-                <a class="menu-li">About</a>
-                <a class="menu-li">Media</a>
-                <a class="menu-li">Accreditation</a>
+                <a class="menu-li" href="/">The Group</a>
+                <a class="menu-li" href="/about">About</a>
+<!--                <a class="menu-li">Media</a>-->
+                <a class="menu-li" href="/accreditation">Accreditation</a>
             </div>
             <div class="get-intouch">
                 <div>
@@ -45,7 +45,7 @@
             </div>
         </div>
     </header>
-    <div class="content ">
+    <div class="content">
         <section class="page" id="hero-section">
             <div class="container">
                 <div class="pitch">
@@ -139,9 +139,16 @@
                 </div>
             </div>
         </section>
+        <section id="client">
+            <div class="container">
+                <div class="main">
+                    <p class="title">Clients</p>
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
-        Designed & Developed by <a href="https://mithiljain.com"> &nbsp;Mithil Jain</a>
+        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
     </footer>
 </body>
 </html>
