--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <script src="js/parallax.js"></script>
 </head>
-<body>
+<body id="home">
     <header>
         <div class="header container">
             <a class="brand-logo">
@@ -73,36 +74,24 @@
                 <img src="img/hero-image.png" class="hero-image" alt="hero"/>
             </div>
         </section>
-        <section class="page layout-1" id="company-1">
+        <section id="the-group">
             <div class="container">
                 <div class="main">
-                    <div class="left-side">
-                        <p class="title">Some Header Here</p>
-                        <div class="divider"></div>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
-                    </div>
-                    <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-1-img"/>
+                    <div class="head">
+                        <p class="title">THE GROUP</p>
+                        <p class="desc">Our Group Companies</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="page layout-2" id="company-2">
+        <section class="layout-2" id="group-1">
             <div class="container">
                 <div class="main">
                     <div class="left-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
-                        <p class="title">Some Header Here</p>
+                        <p class="title">Bhamra Concrete Private Limited</p>
                         <div class="divider"></div>
                         <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
                             pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
@@ -110,18 +99,15 @@
                             in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="page layout-3" id="company-3">
+        <section class="layout-3" id="group-2">
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <p class="title">Some Header Here</p>
+                        <p class="title">Fuelmen Services Private Limited</p>
                         <div class="divider"></div>
                         <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
                             pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
@@ -129,9 +115,6 @@
                             in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
                             Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
                             in pretium orci vestibulum eget</p>
-                        <button class="primary-button">
-                            VISIT HERE
-                        </button>
                     </div>
                     <div class="right-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
@@ -139,13 +122,82 @@
                 </div>
             </div>
         </section>
+        <section id="services">
+            <div class="container">
+                <div class="main">
+                    <div class="head">
+                        <p class="title">Services</p>
+                        <p class="desc">Services that we provide</p>
+                    </div>
+                    <section class="layout-2" id="service-1">
+                        <div class="container">
+                            <div class="main">
+                                <div class="left-side">
+                                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                                </div>
+                                <div class="right-side">
+                                    <p class="title">Service 1</p>
+                                    <div class="divider"></div>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                                        pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                        in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
+                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                        in pretium orci vestibulum eget</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="layout-3" id="service-2">
+                        <div class="container">
+                            <div class="main">
+                                <div class="left-side">
+                                    <p class="title">Service 2</p>
+                                    <div class="divider"></div>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                                        pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                        in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
+                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                                        in pretium orci vestibulum eget</p>
+                                </div>
+                                <div class="right-side">
+                                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
         <section id="client">
             <div class="container">
                 <div class="main">
                     <p class="title">Clients</p>
+                    <p class="desc">Some of are wellknown clients</p>
+                    <div class="clients-row">
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    </div>
                 </div>
             </div>
         </section>
+        <!--<section id="testimonials">
+            <div class="container">
+                <div class="main">
+                    <p class="title">Testimonials</p>
+                    <p class="desc">Read what clients say about us</p>
+                </div>
+            </div>
+        </section>-->
+
     </div>
     <footer>
         Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
