--- a/careers.html
+++ b/careers.html
@@ -93,7 +93,7 @@
                         <div class="content-side">
                             <p class="content-title">Ready to Join ?</p>
                             <p class="content-desc">If you are unable to find a suitable opening please do not worry!
-                                We are always up to discover new talents, kindly mail us your resume to hr@bhavani.com</p>
+                                We are always up to discover new talents, kindly mail us your resume to hr@bhamragroup.com</p>
                         </div>
                         <div class="cta-side">
                             <button class="primary-button">
