--- a/about.html
+++ b/about.html
@@ -53,13 +53,9 @@
                     <div class="left-side">
                         <p class="title">Who we are</p>
                         <div class="divider"></div>
-                        <p class="desc"><b>Detailed history of Bhamra Group
-                            Milestones and achievements should come here in short</b>
-                            auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget</p>
+                        <p class="desc"><b>Bhamra Concrete Private Limited is a leading RMC Logistic company in Mumbai Region</b>
+                            With Fleet of More than 250 Vehicles the company delivering 1.5 Million Cu.m per month
+                            </p>
                     </div>
                     <div class="right-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
@@ -79,7 +75,7 @@
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Manmeet Singh Bhamra</p>
-                                <p class="role">Role</p>
+                                <p class="role">Director</p>
                             </div>
                         </div>
                         <div class="leader">
@@ -87,8 +83,8 @@
                                 <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
                             </div>
                             <div class="desc">
-                                <p class="name">Mr. Manmeet Singh Bhamra</p>
-                                <p class="role">Role</p>
+                                <p class="name">Mr. Chanmeet Singh Bhamra</p>
+                                <p class="role">Director</p>
                             </div>
                         </div>
                     </div>
@@ -120,12 +116,7 @@
                     <div class="left-side">
                         <p class="title">Our Vision</p>
                         <div class="divider"></div>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget</p>
+                        <p class="desc">We are operating with a vision to Delivery 2.5 Milliom Cu.m of RMC every month by the year 2030</p>
                     </div>
                     <div class="right-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
