--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
                     <div>
                         <p class="pitch-text">TRUSTED SUPPLIER <p>
                         <p class="pitch-text">IN CEMENT INDUSTRY</p>
-                        <p class="pitch-text">SINCE <span class="highlight-text">1938</span></p>
+                        <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
                         <div class="divider"></div>
                         <p class="soft-pitch-text">
-                            Bhamra Concrete Pvt. Ltd. is dealing with hiring and
-                            leasing of construction equipments including
-                            Bhamra Concrete Pvt. Ltd. is dealing with <br/> hiring and
-                            leasing of construction equipments including
+                            Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team enabling smooth operations of the Vehicles to the RMC Plants <br/> hiring and
                         </p>
                         <div class="hero-cta">
                             <button>
@@ -93,12 +90,8 @@
                     <div class="right-side">
                         <p class="title">Bhamra Concrete Private Limited</p>
                         <div class="divider"></div>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget</p>
+                        <p class="desc">With Fleet of more than 250 Trasnit Mixers it delivers Reaady Mix Concrete to the whole of Mumbai.
+                        We hold a quarter share in the market of RMC Ligistics in Mumbai Region</p>
                     </div>
                 </div>
             </div>
@@ -109,12 +102,8 @@
                     <div class="left-side">
                         <p class="title">Fuelmen Services Private Limited</p>
                         <div class="divider"></div>
-                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                            in pretium orci vestibulum eget</p>
+                        <p class="desc">With Mobile Fuel Tanker, we deliver diesel at the doorstep to our customers. 
+                                    Monthly 2 lakhs Litres of Diesel is been sold by the company</p>
                     </div>
                     <div class="right-side">
                         <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
@@ -138,12 +127,7 @@
                                 <div class="right-side">
                                     <p class="title">Service 1</p>
                                     <div class="divider"></div>
-                                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                                        pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                        in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                        in pretium orci vestibulum eget</p>
+                                    <p class="desc">In House Maintenance Team enable us to keep the fleet running with minimum breakdowns</p>
                                 </div>
                             </div>
                         </div>
@@ -154,12 +138,7 @@
                                 <div class="left-side">
                                     <p class="title">Service 2</p>
                                     <div class="divider"></div>
-                                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                                        pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                        in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                                        in pretium orci vestibulum eget</p>
+                                    <p class="desc"> We provide Transit Mixers on Taxi Basis</p>
                                 </div>
                                 <div class="right-side">
                                     <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
