--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
                         <div class="divider"></div>
                         <p class="soft-pitch-text">
-                            Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team enabling smooth operations of the Vehicles to the RMC Plants <br/> hiring and
+                            Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team enabling smooth operations of the Vehicles to the RMC Plants <br/>
                         </p>
                         <div class="hero-cta">
                             <button>
@@ -90,8 +90,8 @@
                     <div class="right-side">
                         <p class="title">Bhamra Concrete Private Limited</p>
                         <div class="divider"></div>
-                        <p class="desc">With Fleet of more than 250 Trasnit Mixers it delivers Reaady Mix Concrete to the whole of Mumbai.
-                        We hold a quarter share in the market of RMC Ligistics in Mumbai Region</p>
+                        <p class="desc">With Fleet of more than 250 Trasnit Mixers we deliver Ready Mix Concrete to the whole of Mumbai.
+                        We hold more than a quarter share in the market of RMC Logistics in Mumbai Region</p>
                     </div>
                 </div>
             </div>
