--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="leader">
                             <div class="img">
-                                <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                                <img src="Chanmeet.jpg" alt="hero" class="company-3-img"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Chanmeet Singh Bhamra</p>
