--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                             </p>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="New TM.jpeg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
