--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                     <div class="leaders">
                         <div class="leader">
                             <div class="img">
-                                <img src="img/stock-img.jpeg" alt="hero"/>
+                                <img src="Manmeet.jpg" alt="hero"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Manmeet Singh Bhamra</p>
