--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/hero-image.png" class="hero-image" alt="hero"/>
+                <img src="TM.png" class="hero-image" alt="hero"/>
             </div>
         </section>
         <section id="the-group">
